--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "query-string": "^6.13.5",
     "uuid": "^8.3.0",
     "uuidv1": "^1.6.14"
   }
