--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,9 @@ PORT=8000
 MONGO_URI=mongodb+srv://dbUser:AdCtaGX20KlDXdtP@cluster0.nudwp.mongodb.net/dbUser?retryWrites=true&w=majority
 DATABASE=mongodb://localhost/ecommerce
 JWT_SECRET=NICE_TRY_WANNABE_HACKER_THIS_PASSWORD_HAS_TO_BE_LONGER
+
+#npm i braintree
+#BRAIN TREE PAYMENT SYSTEM API
+BRAINTREE_MERCHANT_ID=sjv9pw8n6vfwyxvs
+BRAINTREE_PUBLIC_KEY=t728ynptympjwc6p 	
+BRAINTREE_PRIVATE_KEY=0990ef9c044a8fc7c63ab9a7e2198b14
