--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 #Mandatory for you to have
-REACT_APP_API_URL=http://localhost:8000/api
+REACT_APP_API_URL=https://social-network-application-123.herokuapp.com/api
